# vaultium

./: README.md  compose-full-pq.yaml  compose.yaml
nginx/: Dockerfile  Dockerfile-curl  nginx.conf
nginx/certs/: .gitignore  README.md  setup.sh  tls-full-pq.sh  tls-hybrid.sh
nginx/certs/config/: nginx.cnf  root-ca.cnf
nginx/certs/data/full-pq/: nginx.crt  nginx.csr  nginx.key  root-ca.crt  root-ca.key  root-ca.srl
nginx/certs/data/hybrid/: nginx.crt  nginx.key  root-ca.crt  root-ca.key  root-ca.srl
report/: decryption_all.mmd  decryption_single_file.mmd  encryption.mmd  main.typ  password_change.mmd
report/img/: file.drawio  file_key.drawio  kek.drawio  kem_decapsulation.drawio  kem_encapsulation.drawio  mek.drawio
src/: Cargo.toml
src/.cargo/: config.toml
src/client/: Cargo.toml
src/client/src/: api.rs  errors.rs  main.rs  types.rs
src/lib/: Cargo.toml
src/lib/src/: dictionnary.rs  file.rs  key.rs  lib.rs  obfuscated_key.rs
src/lib/src/asymetric/kem/: ciphertext.rs  kem_encapsulation.rs  keypair.rs  mod.rs  public_key.rs  secret_key.rs  shared_secret.rs
src/lib/src/asymetric/sign/: key.rs
src/lib/src/symetric/: ephemeral_key.rs  file_key.rs  key.rs  key_encryption_key.rs  master_encryption_key.rs  mod.rs  nonce.rs  salt.rs
src/lib/src/web/: requests.rs
src/packer/: Cargo.toml
src/packer/src/: main.rs
src/server/: Cargo.toml
src/server/src/: helpers.rs  main.rs
src/server/src/middlewares/: auth.rs
src/server/src/routes/: ephemeral_key.rs  file_key.rs  kek.rs  mek.rs  mod.rs
src/unpacker/: Cargo.toml
src/unpacker/src/: main.rs
