[workspace]
resolver = "3"
members = ["lib", "client", "unpacker", "server", "packer"]

[workspace.package]
edition = "2024"
version = "0.0.1"
authors = ["Thynkon"]
description = "Post-quantum file encryption tool written for academic purposes"
documentation = "https://example.com/bar"

[workspace.dependencies]
aes-gcm-siv = "0.12.0-rc.3"
generic-array = "1.3.5"
anyhow = "1.0.100"
argon2 = {version="0.5.3", features=["std"]}
hkdf = "0.12.4"
rand = "0.9.2"
serde = {version="1.0.228", features=["derive"]}
serde_json = "1.0.145"
serde_with = "3.16.1"
sha2 = "0.10.9"
clap = { version = "4.5.53", features = ["derive"] }
simple_logger = "5.1.0"
log = "0.4.29"
uuid = {version = "1.19.0", features = ["v4"]}
zeroize = { version = "1.8.2", features = ["derive"] }
# packer
memfd = "0.6.5"
nix = {version="0.31.1", features=["process"]}
inquire = "0.9.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls-manual-roots"] }
tokio = { version = "1", features = ["full"] }

actix-web = { version = "4" }
pqcrypto = {version="0.18.1", features=["serialization"]}
pqcrypto-traits = "0.3.5"
rustls = { version="0.23.35", features=["aws-lc-rs", "prefer-post-quantum"] }
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.13.2"
rustls-native-certs = "0.8.3"

url = "2.5.7"
thiserror = "2.0.17"

secrets = {version="1.2.0"}
walkdir = {version="2"}

strum = "0.27"
strum_macros = "0.27"
