[package]
name = "server"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
lib = { path = "../lib" }
actix-web.workspace = true
anyhow.workspace = true
log.workspace = true
pqcrypto-traits.workspace = true
pqcrypto.workspace = true
serde.workspace = true
serde_json.workspace = true
simple_logger.workspace = true
thiserror.workspace = true
uuid.workspace = true
